@@ -1,5 +1,7 @@
 17 Jan 2012: Wouter
 	- do not just refresh the systray, but entire desktop (for windows).
+	- fix dnssec-trigger-control error printout if SSL files fail.
+	- dnssec-trigger-control uses registry config location (for windows).
 
 14 Jan 2012: Wouter
 	- show version number in add-removeprograms configpanel (windows).
